{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMaps",
            "id": "a68672b2-b7d2-4e9c-896f-fa23e89e59ef",
            "actions": [
                {
                    "name": "GetAxisDirectionMove",
                    "type": "Value",
                    "id": "de53db69-ab73-4c75-8af1-5a883aebddd4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GetKeyDownJump",
                    "type": "Button",
                    "id": "a848dc71-4e52-4ae5-99f7-1e626a17f6d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetKeyRun",
                    "type": "Button",
                    "id": "dcefffe8-6633-42cb-8cce-49982b8d5bc2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "6c984cd9-66be-40ce-a1e6-60e8be762111",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "9aa15aa9-156b-48ce-8e9f-66dc8e34453c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMidle",
                    "type": "Button",
                    "id": "ed724957-cc64-4f42-9674-b7001646bf5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryKey",
                    "type": "Button",
                    "id": "51dbd497-9881-4753-904b-fc38e521c3a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "70dbf33c-e1e2-463a-82d1-483533d54ccc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetAxisDirectionMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "148f7171-ca78-4fac-8fdf-58523b7a24fd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetAxisDirectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "517a9ff4-6b67-402e-8ebd-eb6eafcac76c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetAxisDirectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0102949d-1d67-4526-8db4-b04df422d31d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetAxisDirectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2672bc91-c27a-4284-af34-245c5b7f16b2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetAxisDirectionMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "452188e0-1b65-41fb-8fc0-b8d6e58ad865",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetKeyDownJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e415af9c-2bf6-4559-af2f-effd1493cda1",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetKeyRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "904195e2-837f-4f12-a921-868fff9ea711",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6ea02be-c4b5-4e43-bb52-fb1507a6ac03",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ec7e32e-83ec-48c3-b5f5-57489fb92082",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMidle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b809451b-56dd-4af6-acc4-c766196cc0e4",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}